test/error/patternfrontier.luau
print(string.match("test", "test%f"))
